docs/api/qiskit/0.43/qiskit.primitives.Sampler.mdx
---
title: Sampler
description: API reference for qiskit.primitives.Sampler
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.Sampler
---

# Sampler

<Class id="qiskit.primitives.Sampler" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/primitives/sampler.py" signature="Sampler(*, options=None)">
  Bases: [`BaseSampler`](qiskit.primitives.BaseSampler "qiskit.primitives.base.base_sampler.BaseSampler")\[`PrimitiveJob`\[[`SamplerResult`](qiskit.primitives.SamplerResult "qiskit.primitives.base.sampler_result.SamplerResult")]]

  Sampler class.

  [`Sampler`](#qiskit.primitives.Sampler "qiskit.primitives.Sampler") is a reference implementation of [`BaseSampler`](qiskit.primitives.BaseSampler "qiskit.primitives.BaseSampler").

  **Run Options**

  *   **shots** (None or int) – The number of shots. If None, it calculates the probabilities. Otherwise, it samples from multinomial distributions.
  *   **seed** (np.random.Generator or int) – Set a fixed seed or generator for the multinomial distribution. If shots is None, this option is ignored.

  **Parameters**

  **options** – Default options.

  **Raises**

  **QiskitError** – if some classical bits are not used for measurements.

  ## Methods

  <span id="qiskit-primitives-sampler-run" />

  ### run

  <Function id="qiskit.primitives.Sampler.run" name="run" signature="Sampler.run(circuits, parameter_values=None, **run_options)">
    Run the job of the sampling of bitstrings.

    **Parameters**

    *   **circuits** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| Sequence\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*]*) – One of more circuit objects.
    *   **parameter\_values** (*Sequence\[float] | Sequence\[Sequence\[float]] | None*) – Parameters to be bound to the circuit.
    *   **run\_options** – Backend runtime options used for circuit execution.

    **Returns**

    The job object of the result of the sampler. The i-th result corresponds to `circuits[i]` evaluated with parameters bound as `parameter_values[i]`.

    **Raises**

    **ValueError** – Invalid arguments are given.

    **Return type**

    T
  </Function>

  <span id="qiskit-primitives-sampler-set-options" />

  ### set\_options

  <Function id="qiskit.primitives.Sampler.set_options" name="set_options" signature="Sampler.set_options(**fields)">
    Set options values for the estimator.

    **Parameters**

    **\*\*fields** – The fields to update the options
  </Function>

  ## Attributes

  ### circuits

  <Attribute id="qiskit.primitives.Sampler.circuits" name="circuits">
    Quantum circuits to be sampled.

    **Returns**

    The quantum circuits to be sampled.
  </Attribute>

  ### options

  <Attribute id="qiskit.primitives.Sampler.options" name="options">
    Return options values for the estimator.

    **Returns**

    options
  </Attribute>

  ### parameters

  <Attribute id="qiskit.primitives.Sampler.parameters" name="parameters">
    Parameters of quantum circuits.

    **Returns**

    List of the parameters in each quantum circuit.
  </Attribute>
</Class>

